# libspiffs

./: Makefile.in
src/: Makefile.am  Makefile.in
